src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Create_New_Asset__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VW_CreateNewAsset?Item_Number=&quot; +  ProductCode , &quot;Launch Visual Flow&quot; , &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create New Asset...</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VOD_Product_Sub_Type__c</fullName>
        <label>VOD Product Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flexi</fullName>
                </value>
                <value>
                    <fullName>Fill</fullName>
                </value>
                <value>
                    <fullName>Midi</fullName>
                </value>
                <value>
                    <fullName>Mini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VOD_Product_Type__c</fullName>
        <label>VOD Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VOD</fullName>
                </value>
                <value>
                    <fullName>NVOD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>